# trendfy

./: .gitignore  Makefile  README.md  docker-compose.yml  exemple.env  pyproject.toml  requirementes.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml
src/trendfy/: analyse.py  helpers.py  main.py  model.py
src/trendfy/psql/: test.py
tests/: conftest.py  test_analyse.py  test_collect.py  test_helpers.py  test_main.py  test_psql_main.py  test_tools.py
trendfy/: __main__.py  analyse.py  classificator.py  collect.py  errors.py  helpers.py  main.py  model.py  params.py  spotify-colect.py  spotify_colect.py  spotify_collect.py  tools.py  trend.py
trendfy/psql/: main.py  test.py
trendfy/tests/: test_main.py
