[metadata]


name = Trendfy
description = Spotify music analysis and clusterization
author = romavini
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    trendfy

install_requires =
    SQLAlchemy>=1.0.0
    python-dotenv>=0.15.0
    psycopg2>=2.0.0
    psycopg2-binary>=2.0.0
    pycodestyle>=2.0.0
    numpy>=1.0.0
    pandas>=1.0.0

python_requires = >=3.6
package_dir =
    =src

zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
trendfy = py.typed

[flake8]
max-line-length = 160
